@transaction, spesification api and other unimplemeted tests added for rollback and other senarios